# mass_coverart

./: .gitignore  Cargo.toml  README.md  build.rs
src/: api.rs  app.rs  main.rs  parser.rs
src/api/: bandcamp.rs  mod.rs  musicbrainz.rs  qobuz.rs  queue.rs  shared.rs  yt.rs  yt_music.rs
src/app/: iced_app.rs  img.rs  img_group.rs  mod.rs  song.rs  song_img.rs  song_view.rs  styles.rs  tags.rs  view.rs
src/parser/: file_parser.rs  image_parser.rs
src/ui/: app.rs
