[package]
name = "mass_coverart"
version = "0.2.0"
edition = "2024"

[dependencies]
any = "0.0.1"
anyhow = "1.0.100"
audiotags = "0.5.0"
bytes = "1.10.1"
iced = {version = "0.13.1", features = ["tokio", "debug","image"]}
image = "0.25.8"
image-compare = "0.5.0"
musicbrainz_rs = "0.12.0"
rand = "0.9.2"
reqwest = "0.12.23"
rfd = "0.15.4"
thiserror = "2.0.16"
tokio = "1.47.1"
tokio-stream = "0.1.17"
yt-search = "0.1.1"


[build-dependencies]
winresource = "0.1.23"
