[package]
name = "mass_coverart"
version = "0.2.0"
edition = "2024"
authors = ["Daiter"]

[dependencies]
any = "0.0.1"
anyhow = "1.0.100"
audiotags = "0.5.0"
bytes = "1.10.1"
flexi_logger = "0.31.4"
form_urlencoded = "1.2.2"
iced = { version = "0.13.1", features = ["tokio", "debug", "image"] }
image = "0.25.8"
image-compare = "0.5.0"
json = "0.12.4"
log = "0.4.28"
musicbrainz_rs = { version=  "0.12.0", features = ["rate_limit"] }
rand = "0.9.2"
regex = "1.11.3"
reqwest = "0.12.23"
rfd = "0.15.4"
scraper = "0.24.0"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = "1.47.1"
tokio-stream = "0.1.17"
urlencoding = "2.1.3"
yt-search = "0.1.1"


[build-dependencies]
winresource = "0.1.23"
